# dbgify

./: .travis.yml  Cargo.toml  README.md
dbg-collect/: Cargo.toml
dbg-collect/src/: format.rs  lib.rs  vars.rs
dbg-step/: Cargo.toml
dbg-step/src/: lib.rs
derive-dbg/: Cargo.toml
derive-dbg/src/: args.rs  func.rs  lib.rs  parse.rs  scratch.rs  visit.rs
examples/: main.rs  match.rs  method.rs
src/: lib.rs
