[package]
name = "dbgify"
version = "0.1.0"
authors = ["Devin R <devin.ragotzy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-dbg = { path="./derive-dbg", version="0.1" }
dbg-collect = { path = "./dbg-collect" }
dbg-step = { path = "./dbg-step" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console = "0.7"
