[package]
name = "dbgify"
version = "0.1.0"
authors = ["Devin R <devin.ragotzy@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Step debugger for Rust used from an attribute macro"
repository = "https://github.com/DevinR528/dbgify"
keywords = ["cargo", "subcommand", "dependencies", "sort", "check"]
categories = ["development-tools::cargo-plugins", "development-tools"]
edition = "2018"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-dbg = { path="./derive-dbg", version="0.1" }
dbg-collect = { path = "./dbg-collect" }
dbg-step = { path = "./dbg-step" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console = "0.7"
