[package]
name = "dbg-collect"
version = "0.1.0"
authors = ["Devin R <devin.ragotzy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
