[package]
name = "derive-dbg"
version = "0.1.0"
authors = ["Devin R <devin.ragotzy@gmail.com>"]
edition = "2018"

[dependencies]
syn= { version="0.15", features=["derive", "parsing", "printing", "extra-traits", "full", "visit-mut", "clone-impls"] }
proc-macro2="0.4"
quote="0.6"

[lib]
proc-macro = true
