[package]
name = "derive-dbg"
version = "0.1.0"
authors = ["Devin R <devin.ragotzy@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Rust step wise debugging as a macro!"
repository = "https://github.com/DevinR528/dbgify"
keywords = ["debug", "breakpoint", "step-wise", "tab-complete", "macro"]
categories = ["development-tools", "development-tools::debugging"]
edition = "2018"

[dependencies]
dbg-collect = { path = "../dbg-collect" }
syn= { version="1.0", features=["derive", "parsing", "printing", "extra-traits", "full", "visit-mut", "clone-impls"] }
proc-macro2 = "1.0"
quote="1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console = "0.9"
proc-macro-error = "0.4"

[lib]
proc-macro = true
